Policy: correctly set and display line breaks in rules, still need to improve appearance and define descriptions

--- a/style/main.scss
+++ b/style/main.scss
@@ -2825,6 +2825,9 @@
   .whitespace-pre {
     white-space: pre;
   }
+  .whitespace-pre-line {
+    white-space: pre-line;
+  }
   .whitespace-pre-wrap {
     white-space: pre-wrap;
   }
